--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.7",
+    "nodemailer-express-handlebars": "^6.1.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
@@ -33,6 +34,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.10.4",
+    "@types/nodemailer-express-handlebars": "^4.0.5",
     "@types/uuid": "^9.0.7",
     "esbuild-register": "^3.5.0",
     "nodemon": "^3.0.2",
